package com.cagepa.painel.fachada_painel_cagepa.domain.enums;

public enum StatusHidrometro {
    ATIVO,
    INATIVO,
    MANUTENCAO
}
